##---------------------------------------------------
# Nextar build file.
# : Root file common to all configuration.
# Abhishek Dey
# 5:56 PM 9/25/2011
##---------------------------------------------------

# CMake version

## Build targets
#============================================================
add_subdirectory(Base)
#add_subdirectory(Engine)
#add_subdirectory(RenderSystem)

