##---------------------------------------------------
# Nextar build file.
# : Root file common to all configuration.
# Abhishek Dey
# 5:56 PM 9/25/2011
##---------------------------------------------------

# CMake version

## Build targets
#============================================================
add_framework(Base)
add_framework(Engine)
#add_subdirectory(RenderSystem)

