##---------------------------------------------------
# Nextar build file.
# Abhishek Dey
# : Plugin configuration file.
# 5:56 PM 9/25/2011
##---------------------------------------------------

## Configure paths
#============================================================
add_subdirectory(LibNexTech.tst)
add_subdirectory(RenderEngine.tst)
