##---------------------------------------------------
# Nextar build file.
# Abhishek Dey
# 5:56 PM 9/25/2011
# : Plugin configuration file.
##---------------------------------------------------

## Configure paths
#============================================================
set(NEX_UNIT_TESTS_LIBNEXTECH ${PROJECT_SOURCE_DIR}/UnitTests/LibNexTech.tst)
add_subdirectory(FileSystem)
