##---------------------------------------------------
# Nextar build file.
# Abhishek Dey
# 5:56 PM 9/25/2011
# : Plugin configuration file.
##---------------------------------------------------

## Configure paths
#============================================================
set(NEX_UNIT_TESTS_RENDERENGINE ${PROJECT_SOURCE_DIR}/UnitTests/RenderEngine.tst)
add_subdirectory(WindowCreation)
add_subdirectory(Mesh)